--- a/views/formUsuario.html
+++ b/views/formUsuario.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/usuario/novo" method="post">
+    <form action="/usuarios/novo" method="post">
         <div>
             <label for="nickname">Nickname: </label>
             <inpit type="text" id="nickname" name="nickname"></inpit>
