--- a/views/formJogo.html
+++ b/views/formJogo.html
@@ -9,17 +9,17 @@
     <form action="/jogo/novo" method="post">
         <div>
             <label for="titulo">Titulo: </label>
-            <inpit type="text" id="titulo" name="titulo"></inpit>
+            <input type="text" id="titulo" name="titulo"></inpit>
         </div>
         <br/>
         <div>
             <label for="descricao">Descrção: </label>
-            <inpit type="text" id="descricao" name="descricao"></inpit>
+            <input type="text" id="descricao" name="descricao"></inpit>
         </div>
         <br/>
         <div>
             <label for="precoBase">Preço Base: </label>
-            <inpit type="number" id="precoBase" name="precoBase"></inpit>
+            <input type="number" id="precoBase" name="precoBase"></inpit>
         </div>
         <br/>
         <input type="submit" value="Cadastrar"/>
