--- a/views/formUsuario.handlebars
+++ b/views/formUsuario.handlebars
@@ -1,14 +1,27 @@
+{{#if usuario}}
 
+<h1>Atualizar Cadastro</h1>
+<form action="/usuarios/{{usuario.id}}/atualizar" method="post">
+
+{{else}}
+
+<h1>Cadastre-se</h1>
 <form action="/usuarios/novo" method="post">
+
+{{/if}}
     <div>
          <label for="nickname">Nickname: </label>
-         <input type="text" id="nickname" name="nickname"></inpit>
+         <input type="text" id="nickname" name="nickname" value="{{usuario.nickname}}"></inpit>
      </div>
      <br/>
      <div>
          <label for="nome">Nome: </label>
-         <input type="text" id="nome" name="nome"></inpit>
+         <input type="text" id="nome" name="nome" value="{{usuario.nome}}"></inpit>
     </div>
     <br/>
+{{#if usuario}}
+    <input type="submit" value="Salvar"/>
+{{else}}
     <input type="submit" value="Cadastrar"/>
+{{/if}}
 </form>
