--- a/views/usuarios.handlebars
+++ b/views/usuarios.handlebars
@@ -1,1 +1,26 @@
 <h1>Usuarios</h1>
+
+<a href="/usuarios/novo"> Cadastrar Usuarios</a>
+
+<table border="1">
+    <tr>
+        <td>ID</td>
+        <td>Nickname</td>
+        <td>Nome</td>
+        <th></th>
+
+    </tr>
+
+    {{#each usuarios}}
+
+        <tr>
+            <td>{{ this.id }}</td>
+            <td>{{ this.nickname }}</td>
+            <td>{{ this.nome }}</td>
+            <td>
+                <a href="/usuarios/{{this.id}}/atualizar">Atualizar</a>
+            </td>
+        </tr>
+    {{/each}}
+
+</table>
