--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
         </a>
         <h1>Maets</h1>
         <nav>
-            <a href="">Usuarios</a>
-            <a href="">Jogos</a>
+            <a href="/usuarios">Usuarios</a>
+            <a href="/jogos">Jogos</a>
         </nav>
     </header>
     <main>
